// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon < 256 1`] = `"ERR_ICON_TOO_SMALL"`;

exports[`icon not an image 1`] = `"ERR_ICON_UNKNOWN_FORMAT"`;

exports[`win zip 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-win.zip",
      "safeArtifactName": "TestApp-1.1.0-win.zip",
    },
  ],
}
`;

exports[`win zip 2`] = `
Array [
  "chrome_100_percent.pak",
  "chrome_200_percent.pak",
  "d3dcompiler_47.dll",
  "ffmpeg.dll",
  "icudtl.dat",
  "libEGL.dll",
  "libGLESv2.dll",
  "LICENSE.electron.txt",
  "LICENSES.chromium.html",
  "locales/",
  "locales/am.pak",
  "locales/ar.pak",
  "locales/bg.pak",
  "locales/bn.pak",
  "locales/ca.pak",
  "locales/cs.pak",
  "locales/da.pak",
  "locales/de.pak",
  "locales/el.pak",
  "locales/en-GB.pak",
  "locales/en-US.pak",
  "locales/es-419.pak",
  "locales/es.pak",
  "locales/et.pak",
  "locales/fa.pak",
  "locales/fi.pak",
  "locales/fil.pak",
  "locales/fr.pak",
  "locales/gu.pak",
  "locales/he.pak",
  "locales/hi.pak",
  "locales/hr.pak",
  "locales/hu.pak",
  "locales/id.pak",
  "locales/it.pak",
  "locales/ja.pak",
  "locales/kn.pak",
  "locales/ko.pak",
  "locales/lt.pak",
  "locales/lv.pak",
  "locales/ml.pak",
  "locales/mr.pak",
  "locales/ms.pak",
  "locales/nb.pak",
  "locales/nl.pak",
  "locales/pl.pak",
  "locales/pt-BR.pak",
  "locales/pt-PT.pak",
  "locales/ro.pak",
  "locales/ru.pak",
  "locales/sk.pak",
  "locales/sl.pak",
  "locales/sr.pak",
  "locales/sv.pak",
  "locales/sw.pak",
  "locales/ta.pak",
  "locales/te.pak",
  "locales/th.pak",
  "locales/tr.pak",
  "locales/uk.pak",
  "locales/vi.pak",
  "locales/zh-CN.pak",
  "locales/zh-TW.pak",
  "resources/",
  "resources/app.asar",
  "resources.pak",
  "snapshot_blob.bin",
  "swiftshader/",
  "swiftshader/libEGL.dll",
  "swiftshader/libGLESv2.dll",
  "Test App ßW.exe",
  "v8_context_snapshot.bin",
  "vk_swiftshader.dll",
  "vk_swiftshader_icd.json",
  "vulkan-1.dll",
]
`;

exports[`zip artifactName 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-linux-x86_64.AppImage",
      "safeArtifactName": "TestApp-1.1.0-x86_64.AppImage",
      "updateInfo": Object {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-win-x64.zip",
      "safeArtifactName": "TestApp-1.1.0-win.zip",
    },
  ],
}
`;

exports[`zip artifactName 2`] = `
Array [
  "chrome_100_percent.pak",
  "chrome_200_percent.pak",
  "d3dcompiler_47.dll",
  "ffmpeg.dll",
  "icudtl.dat",
  "libEGL.dll",
  "libGLESv2.dll",
  "LICENSE.electron.txt",
  "LICENSES.chromium.html",
  "locales/",
  "locales/am.pak",
  "locales/ar.pak",
  "locales/bg.pak",
  "locales/bn.pak",
  "locales/ca.pak",
  "locales/cs.pak",
  "locales/da.pak",
  "locales/de.pak",
  "locales/el.pak",
  "locales/en-GB.pak",
  "locales/en-US.pak",
  "locales/es-419.pak",
  "locales/es.pak",
  "locales/et.pak",
  "locales/fa.pak",
  "locales/fi.pak",
  "locales/fil.pak",
  "locales/fr.pak",
  "locales/gu.pak",
  "locales/he.pak",
  "locales/hi.pak",
  "locales/hr.pak",
  "locales/hu.pak",
  "locales/id.pak",
  "locales/it.pak",
  "locales/ja.pak",
  "locales/kn.pak",
  "locales/ko.pak",
  "locales/lt.pak",
  "locales/lv.pak",
  "locales/ml.pak",
  "locales/mr.pak",
  "locales/ms.pak",
  "locales/nb.pak",
  "locales/nl.pak",
  "locales/pl.pak",
  "locales/pt-BR.pak",
  "locales/pt-PT.pak",
  "locales/ro.pak",
  "locales/ru.pak",
  "locales/sk.pak",
  "locales/sl.pak",
  "locales/sr.pak",
  "locales/sv.pak",
  "locales/sw.pak",
  "locales/ta.pak",
  "locales/te.pak",
  "locales/th.pak",
  "locales/tr.pak",
  "locales/uk.pak",
  "locales/vi.pak",
  "locales/zh-CN.pak",
  "locales/zh-TW.pak",
  "resources/",
  "resources/app.asar",
  "resources.pak",
  "snapshot_blob.bin",
  "swiftshader/",
  "swiftshader/libEGL.dll",
  "swiftshader/libGLESv2.dll",
  "Test App ßW.exe",
  "v8_context_snapshot.bin",
  "vk_swiftshader.dll",
  "vk_swiftshader_icd.json",
  "vulkan-1.dll",
]
`;
